force-app/main/default/objects/Port__c/Port__c.object-meta.xml
<CustomObject>
    <label>港</label>
    <nameField>
        <label>港名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>