force-app/main/default/objects/Port__c/fields/country_cd__c.field-meta.xml
<CustomField>
    <fullName>country_cd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>国</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>港</relationshipLabel>
    <relationshipName>Port_of_Country</relationshipName>
    <type>Lookup</type>
</CustomField>