force-app/main/default/objects/Port__c/fields/cut_price1__c.field-meta.xml
<CustomField>
    <fullName>cut_price1__c</fullName>
    <label>カット料金1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>