force-app/main/default/objects/Port__c/fields/cut_price2__c.field-meta.xml
<CustomField>
    <fullName>cut_price2__c</fullName>
    <label>カット料金2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>