force-app/main/default/objects/Port__c/fields/inum__c.field-meta.xml
<CustomField>
    <fullName>inum__c</fullName>
    <externalId>true</externalId>
    <label>INUM</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>