force-app/main/default/objects/Port__c/fields/port_name_e__c.field-meta.xml
<CustomField>
    <fullName>port_name_e__c</fullName>
    <label>港名（英字）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>